merge changes for packages view