@@ -1,6 +1,20 @@
+/*
+ * Copyright 2000-2017 JetBrains s.r.o.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.intellij.webcore.packaging;
 
-import com.google.common.collect.ImmutableMap;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
@@ -15,25 +29,23 @@ public class PackageVersionComparator implements Comparator<String> {
   public int compare(String version1, String version2) {
     final List<String> vs1 = parse(version1);
     final List<String> vs2 = parse(version2);
-    int result = 0;
     for (int i = 0; i < vs1.size() && i < vs2.size(); i++) {
-      result = vs1.get(i).compareTo(vs2.get(i));
+      final String vs1Part = vs1.get(i);
+      final String vs2Part = vs2.get(i);
+      if (vs1Part.equals("**") || vs2Part.equals("**")) {
+        return 0;
+      }
+      final int result = vs1Part.compareTo(vs2Part);
       if (result != 0) {
-        break;
+        return result;
       }
     }
-    if (result == 0) {
-      return vs1.size() - vs2.size();
-    }
-    return result;
+    return vs1.size() - vs2.size();
   }
 
   @Nullable
   private static String replace(@Nonnull String s) {
-    final Map<String, String> sub = ImmutableMap.of("pre", "c",
-                                                    "preview", "c",
-                                                    "rc", "c",
-                                                    "dev", "@");
+    final Map<String, String> sub = Map.of("pre", "c", "preview", "c", "rc", "c", "dev", "@");
     final String tmp = sub.get(s);
     if (tmp != null) {
       s = tmp;
@@ -54,7 +66,7 @@ public class PackageVersionComparator implements Comparator<String> {
   }
 
   @Nonnull
-  private List<String> parse(@Nullable String s) {
+  private static List<String> parse(@Nullable String s) {
     // Version parsing from pkg_resources ensures that all the "pre", "alpha", "rc", etc. are sorted correctly
     if (s == null) {
       return Collections.emptyList();
